<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:orientation="horizontal"
    android:paddingEnd="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingStart="15dp">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_editbox"
        android:ems="10"
        android:hint="@string/xp_from"
        android:singleLine="true"

        android:inputType="number"
        android:padding="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="#666666"
        android:textCursorDrawable="@drawable/cursor" />

    <EditText
        android:id="@+id/editText3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:singleLine="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_editbox"
        android:ems="10"
        android:hint="@string/xp_to"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="#666666"
        android:textCursorDrawable="@drawable/cursor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText3"

        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="@drawable/button_selector"
            android:text="@string/calculate"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="0.4"
            android:popupBackground="#424242"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>